@@ -1,3 +1,12 @@
+2014-03-25  James Craig  <jcraig@apple.com>
+
+        Blog-files: combobox demo needs aria-expanded support
+        https://bugs.webkit.org/show_bug.cgi?id=130766
+
+        Reviewed by Chris Fleizach.
+
+        * blog-files/aria1.0/combobox_with_live_region_status.html: Added missing aria-expanded.
+
 2014-03-25  Benjamin Poulain  <bpoulain@apple.com>
 
         Add illustrations for a potential blog post
